full page code, bug with overlap still

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -272,7 +272,7 @@ a:active {
 	right: 0;
 	bottom: 0;
 	top:0;
-	right:0;
+	left:0;
 	width: 100%;
 	height: 100%;
 	background-size: 100% 100%;
@@ -281,6 +281,7 @@ a:active {
 	background-position: center center;
 	background-size: contain;
 	object-fit: cover; /*cover video background */
+	z-index:3;
 }
 
 
